objects/nCinoCSTCrossObjForm__c.object
<CustomObject>
    <description>This custom object has been created to test the limitation on the number of cross object formulas a custom object can have. This test case is for Code Scan.</description>
    <fields>
        <fullName>Loan_DS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Test case for CodeScan</description>
        <label>LoanDescription</label>
        <referenceTo>LLC_BI__Loan__c</referenceTo>
        <relationshipLabel>nCinoCSTCrossObjForms</relationshipLabel>
        <relationshipName>nCinoCSTCrossObjForms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nCinoTestFormula10CST__c</fullName>
        <formula>Loan_DS__r.LLC_BI__Secondary_Market_Sold_To__c</formula>
        <label>nCinoTestFormula10CST</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nCinoTestFormula11CST__c</fullName>
        <formula>Loan_DS__r.LLC_BI__Pricing_Option__r.CreatedById</formula>
        <label>nCinoTestFormula11CST</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nCinoTestFormula12CST__c</fullName>
        <formula>Loan_DS__r.LLC_BI__Branch__r.LLC_BI__City__c</formula>
        <label>nCinoTestFormula12CST</label>
        <type>Text</type>
    </fields>
    <label>nCinoCSTCrossObjForm</label>
    <nameField>
        <label>nCinoCSTCrossObjForm Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>nCinoCSTCrossObjForms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>nCinoCSTBypassRule</fullName>
        <active>true</active>
        <description>This is a test case for CodeScan.</description>
        <errorConditionFormula>AND( LEN(Name) &gt; 4, $User.No_Validation__c = true)</errorConditionFormula>
        <errorMessage>An error has occurred</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>nCinoCSTBypassRule2</fullName>
        <active>true</active>
        <description>This is a test case for CodeScan</description>
        <errorConditionFormula>AND( LEN(Name) &gt; 4, $User.No_Validation__c = false )</errorConditionFormula>
        <errorMessage>There was an error</errorMessage>
    </validationRules>
</CustomObject>